outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_01-06-18/evaluations/problem_eval-7503543589102714828_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scoring to balance local proximity, global destination alignment, and path diversity, while using a reinforcement learning-inspired approach to update selection weights based on historical performance and node centrality.}
                                                                                                                                                                                                                                            ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scoring to balance local proximity, global destination alignment, and path diversity, while using a reinforcement learning-inspired approach to update selection weights based on historical performance and node centrality.}
                                                                                                                                                                                                                                            ^
SyntaxError: unmatched '}'
